fix: ProjectServiceImplTest. heroku wont work with List.of -> Arrays.asList